# kMusicPlayer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  comms.txt  gmon.out  main.c
include/: notes.h  raygui.h
styles/: style_candy.h  style_cyber.h  style_dark.h  style_jungle.h  style_lavanda.h  style_terminal.h
